# space-elevator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/space_elevator/: __main__.py  cli.py
src/space_elevator/template/_pm/: AGENTS.md  README.md  progress.json
src/space_elevator/template/_pm/docs/: review-scoring.md  test-agent-handbook.md
src/space_elevator/template/_pm/docs/agents/: README.md  architect-agent.md  review-agent.md  spec-review.md  test-agent.md  worker-agent.md
src/space_elevator/template/_pm/scripts/: check_progress_schema.py  propeller.py  view_progress.py
src/space_elevator/template/agent/: AGENTS.md  README.md  progress.json
src/space_elevator/template/agent/docs/agents/: README.md  architect-agent.md  review-agent.md  spec-review.md  test-agent.md  worker-agent.md
src/space_elevator/template/agent/scripts/: check_progress_schema.py  propeller.py  view_progress.py
src/space_elevator/template/docs/: progress.json
tests/: test_cli.py
